--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,2 @@
-<!-- views/layouts/main.handlebars -->
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Rent Me</title>
-</head>
-<body>
-
-  {{{body}}}
-
-</body>
-</html>
+ <!-- home.handlebars -->
+ <h1>{{msg}}</h1>
